Allow pages to define links to prefetch

--- a/content/index.haml
+++ b/content/index.haml
@@ -1,6 +1,9 @@
 ---
 layout: master
 description: "I'm a software engineer weaving code in Texas."
+prefetch:
+  - /now/
+  - /notes/
 ---
 
 .mister-ridlen
